// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`add rule 6 party GET /rule-6-parties/add/check-details should match the snapshot 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/2/rule-6-parties/add/email" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062 - Add rule 6 party</span>
                        <h1                         class="govuk-heading-l">Check details and add rule 6 party</h1>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Rule 6 party name</dt>
                                <dd class="govuk-summary-list__value">Test Organisation</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/rule-6-parties/add/name?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F2%2Frule-6-parties%2Fadd%2Fname">Change <span class="govuk-visually-hidden">Rule 6 party name</span></a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Rule 6 party email address</dt>
                                <dd                                 class="govuk-summary-list__value">test@example.com</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/rule-6-parties/add/email?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F2%2Frule-6-parties%2Fadd%2Femail">Change <span class="govuk-visually-hidden">Rule 6 party email address</span></a>
                                    </dd>
                            </div>
                        </dl>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="post" novalidate="novalidate">
                                    <button type="submit" class="govuk-button" data-module="govuk-button">Add rule 6 party</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`add rule 6 party GET /rule-6-parties/add/email should match the snapshot 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/2/rule-6-parties/add/name" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - Add rule 6 party</span>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="POST" novalidate="novalidate">
                                    <div class="govuk-form-group">
                                        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="email"> Rule 6 party email address</label></h1>
                                        <input class="govuk-input" id="email" name="email" type="text" value="">
                                    </div>
                                    <button type="submit" data-prevent-double-click="true" class="govuk-button"
                                    data-module="govuk-button">Continue</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`add rule 6 party GET /rule-6-parties/add/name should match the snapshot 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/2" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - Add rule 6 party</span>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="POST" novalidate="novalidate">
                                    <div class="govuk-form-group">
                                        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="organisation-name"> Rule 6 party name</label></h1>
                                        <input class="govuk-input" id="organisation-name" name="organisationName"
                                        type="text" value="">
                                    </div>
                                    <button type="submit" data-prevent-double-click="true" class="govuk-button"
                                    data-module="govuk-button">Continue</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;
